Closed Bug 832341 Opened 13 years ago Closed 13 years ago

Black background in IE's test drive The Bayou

Categories

(Core :: Layout, defect)

20 Branch
x86
Windows 7
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla21
Tracking Status
firefox19 --- unaffected
firefox20 + verified
firefox21 + verified

People

(Reporter: scoobidiver, Assigned: mattwoodrow)

References

(Blocks 1 open bug, )

Details

(Keywords: regression, Whiteboard: [ietestdrive])

Attachments

(1 file)

After a few seconds, the background image becomes black.
Regression window(m-c) Good: http://hg.mozilla.org/mozilla-central/rev/8a30e07815ff Mozilla/5.0 (Windows NT 6.1; WOW64; rv:20.0) Gecko/20121214 Firefox/20.0 ID:20121214015122 Bad: http://hg.mozilla.org/mozilla-central/rev/50d8f411d305 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:20.0) Gecko/20121214 Firefox/20.0 ID:20121214072922 Pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=8a30e07815ff&tochange=50d8f411d305 Regression window(m-c) Good: http://hg.mozilla.org/integration/mozilla-inbound/rev/66f91a854410 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:20.0) Gecko/20121213 Firefox/20.0 ID:20121213140922 Bad: http://hg.mozilla.org/integration/mozilla-inbound/rev/777fd91b7fda Mozilla/5.0 (Windows NT 6.1; WOW64; rv:20.0) Gecko/20121213 Firefox/20.0 ID:20121213141630 Pushlog: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=66f91a854410&tochange=777fd91b7fda In local build Last Good: b80437be0e70 First Bad: afc699fc7e65 Triggered by: afc699fc7e65 Matt Woodrow — Bug 820246 - Split nsDisplayCanvasBackground into separate color and image items. r=roc
Assignee: nobody → matt.woodrow
I *think* this is correct, fixes this test case.
Attachment #706929 - Flags: review?(roc)
When we call PaintBackground (from nsDisplayBackgroundImage::PaintInternal), we pass nsRect(offset, mFrame->GetSize()) as the aBorderArea parameter. The canvas area is passed as the dirty rect, and the clip rect. Inside nsCSSRendering::PaintBackgroundWithSC, we pass the border area to PrepareBackgroundLayer. nsCSSRendering::GetBackgroundLayerRect is also calling PrepareBackgroundLayer, so using the same value makes sense.
Comment on attachment 706929 [details] [diff] [review] Don't adjust the border area Review of attachment 706929 [details] [diff] [review]: ----------------------------------------------------------------- ok
Attachment #706929 - Flags: review?(roc) → review+
Can you make a reftest for this?
I can try, how do I get the 'CanvasArea()' to extend off the left of the screen?
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
Depends on: 836844
(In reply to Matt Woodrow (:mattwoodrow) from comment #7) > I can try, how do I get the 'CanvasArea()' to extend off the left of the > screen? Put it in an IFRAME?
I am not certain but I think this may have caused a regression (bug 837196)
Depends on: 837196
Comment on attachment 706929 [details] [diff] [review] Don't adjust the border area [Approval Request Comment] Bug caused by (feature/regressing bug #): Bug 820246 User impact if declined: Broken background on a fairly high profile site. Testing completed (on m-c, etc.): Been on m-c for a few weeks Risk to taking this patch (and alternatives if risky): Low risk. Requires bug 836844 to avoid regressions. String or UUID changes made by this patch: None
Attachment #706929 - Flags: approval-mozilla-aurora?
Attachment #706929 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Verified as Fixed on Windows 7 x64 using FF 20b5 and FF 21b6
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: